<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="12dp"
    tools:context=".ui.auth.RegisterActivity">

        <TextView
            android:id="@+id/tvPage"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/let_s_start_the_journey"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextContent.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/TextContent.Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_full_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEmail"
            style="@style/TextContent.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_address"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="186dp"
            app:layout_constraintTop_toBottomOf="@id/lytName"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/TextContent.Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_email_address"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPass"
            style="@style/TextContent.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="186dp"
            app:layout_constraintTop_toBottomOf="@id/lytEmail"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                style="@style/TextContent.Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvRepass"
            style="@style/TextContent.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="186dp"
            app:layout_constraintTop_toBottomOf="@id/lytPass"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytRepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepass"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepass"
                style="@style/TextContent.Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/re_enter_your_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/btn_signin"
            android:elevation="16dp"
            android:text="@string/signup"
            android:textSize="17sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytRepass" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:text="@string/already_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>